// ThinQ Space Sentinel — ERD (dbdiagram.io DBML)
// 실 DB 스키마 기준 (2026-06-22): sentinel 13테이블 + urban_immune(UIS) 3테이블
// 붙여넣기: https://dbdiagram.io/d

Project ThinQ_Sentinel {
  database_type: 'PostgreSQL'
  Note: '요양병원 집단감염 선제차단 시스템 — sentinel(자사) + urban_immune(UIS, read-only)'
}

// ───────────── sentinel 스키마 (자사 DB) ─────────────

Table sites {
  id uuid [pk]
  site_name varchar [not null]
  site_type varchar [not null]
  region_code varchar [not null]
  subscription_phase smallint [not null]
  contract_start date
  max_occupancy int
  created_at timestamptz [not null]
  Note: '사업장(요양병원) 마스터'
}

Table spaces {
  id uuid [pk]
  site_id uuid [not null, ref: > sites.id]
  space_name varchar [not null]
  space_type varchar [not null]
  area_m2 float8 [not null]
  ceiling_m float8 [not null]
  volume_m3 float8
  max_occupancy int [not null]
  device_ids "varchar[]"
  created_at timestamptz [not null]
  Note: '공간(병동/식당/라운지/격리실)'
}

Table users {
  id uuid [pk]
  email varchar [not null]
  role varchar [not null]
  site_id uuid [ref: > sites.id]
  anonymized_id varchar
  slack_user_id varchar
  created_at timestamptz [not null]
  deleted_at timestamptz
  Note: 'RBAC 사용자(ICN/원장/시설관리/보호자)'
}

Table sensor_readings {
  time timestamptz [not null]
  site_id uuid [not null]
  space_id uuid [not null]
  device_id varchar [not null]
  co2_ppm float8
  pm25_ugm3 float8
  temperature float8
  humidity float8
  occupancy int
  ventilation_rate float8
  gas_raw float8
  indexes {
    (time, space_id, device_id) [pk]
  }
  Note: '시계열 센서 적재(rpi-arduino 환경 + laptop-cam 재실)'
}

Table rehva_results {
  id uuid [pk]
  calculated_at timestamptz [not null]
  site_id uuid [not null]
  space_id uuid [not null]
  poi float8 [not null]
  r_event float8
  risk_tier smallint [not null]
  i_value float8
  q_value float8
  tier_source text
  Note: 'Rudnick-Milton/Wells-Riley PoI + 5-tier 산출 결과'
}

Table device_actions {
  id uuid [pk]
  action_at timestamptz [not null]
  site_id uuid [not null]
  device_id varchar [not null]
  action_type varchar [not null]
  trigger_tier smallint
  protocol_name varchar
  status varchar
  response_ms int
  Note: '가전 제어 로그(거버넌스 액추에이션)'
}

Table alerts {
  id uuid [pk]
  alerted_at timestamptz [not null]
  site_id uuid [not null]
  space_id uuid
  from_tier smallint
  to_tier smallint [not null]
  channel varchar
  recipient varchar
  message text
  status varchar
  poi_snapshot float8
  Note: 'tier 전환 알림 이벤트'
}

Table esg_reports {
  id uuid [pk]
  site_id uuid [not null, ref: > sites.id]
  report_month date [not null]
  avg_poi float8
  max_tier_reached smallint
  activation_count int
  compliance_rate float8
  pdf_path varchar
  generated_at timestamptz [not null]
  Note: 'ESG/경영 월간 리포트'
}

Table pathogens {
  code varchar [pk]
  name_kr varchar [not null]
  quanta_rate float8 [not null]
  transmission_mode varchar [not null]
  elderly_mortality_factor float8 [not null]
  target_temp float8 [not null]
  target_rh float8 [not null]
  min_ach float8 [not null]
  uv_required boolean [not null]
  surface_priority boolean [not null]
  notes text
  Note: '8종 위협 병원체 마스터(quanta/온습도/ACH)'
}

Table device_catalog {
  device_type varchar [pk]
  name_kr varchar [not null]
  nursing_priority smallint [not null]
  wells_riley_var varchar
  season_master varchar
  notes text
  Note: '8종 가전 마스터(우선순위/Wells-Riley 변수)'
}

Table legal_mappings {
  id int [pk]
  law_code varchar [not null]
  law_name_kr varchar [not null]
  article varchar
  obligation text [not null]
  sentinel_evidence text [not null]
  enforcement_authority varchar
  Note: '9개 법령 → 증빙 매핑(자동 컴플라이언스)'
}

Table external_signals {
  id uuid [pk]
  collected_at timestamptz [not null]
  signal_type varchar [not null]
  region_code varchar [not null]
  signal_value float8 [not null]
  lead_weeks smallint
  raw_data jsonb
  Note: '(레거시) 외부신호 적재 — 현 운영은 external_live.py가 UIS 직접 소비'
}

Table ml_predictions {
  id uuid [pk]
  predicted_at timestamptz [not null]
  region_code varchar [not null]
  target_date date [not null]
  predicted_risk float8
  predicted_tier smallint
  model_version varchar
  f1_score float8
  Note: '예약 슬롯 — ML 예측은 계획/PoC(현재 미적재)'
}

// ───────────── urban_immune · UIS 외부 DB (read-only) ─────────────

Table risk_scores {
  time timestamptz [not null]
  region text [not null]
  composite_score float8
  l1_score float8
  l2_score float8
  l3_score float8
  alert_level text
  indexes {
    (time, region) [pk]
  }
  Note: 'UIS 조기경보(0~100 + GREEN/YELLOW/ORANGE/RED)'
}

Table layer_signals {
  time timestamptz [not null]
  layer text [not null]
  region text [not null]
  value float8
  source text
  pathogen text
  indexes {
    (time, layer, region) [pk]
  }
  Note: 'UIS 선행지표(KOWAS 하수·DataLab 검색·OTC 약국)'
}

Table confirmed_cases {
  time timestamptz [not null]
  region text [not null]
  per_100k float8
  disease text
  indexes {
    (time, region) [pk]
  }
  Note: 'UIS 확진(KDCA per_100k)'
}

// ───────────── 관계 (논리 참조: 시계열·결과·로그 → 마스터) ─────────────
Ref: sensor_readings.space_id > spaces.id
Ref: sensor_readings.site_id > sites.id
Ref: rehva_results.space_id > spaces.id
Ref: rehva_results.site_id > sites.id
Ref: device_actions.site_id > sites.id
Ref: alerts.space_id > spaces.id
Ref: alerts.site_id > sites.id

TableGroup "sentinel (자사 DB)" {
  sites
  spaces
  users
  sensor_readings
  rehva_results
  device_actions
  alerts
  esg_reports
  pathogens
  device_catalog
  legal_mappings
  external_signals
  ml_predictions
}

TableGroup "urban_immune · UIS (read-only)" {
  risk_scores
  layer_signals
  confirmed_cases
}
